--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
  <header>
-   <h1>AI Tanay - Your Movie Copilot</h1>
+   <h1>Ai Rohan - Your Movie Copilot</h1>
    <p>Which movie did you watch recently?</p>
  </header>
 
